[metadata]
name = picflow
version = 0.1.0
description = CLI tool for image processing and uploading to cloud storage.
author = luhuadong
author_email = luhuadong@163.com
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir = =src
packages = find:
python_requires = >=3.8
install_requires =
    click >=8.1.0
    pyyaml >=6.0
    requests >=2.28.0
    python-dotenv >=0.21.0

[options.packages.find]
where = src
exclude = 
    tests
    examples

[options.entry_points]
console_scripts =
    picflow = picflow.cli:cli